--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,41 @@
 # main links links
 main:
+  - title: "About Me"
+    url: "/#about-me"
+  
+  - title: "Educations"
+    url: "/#-educations"
+
   - title: "Publications"
-    url: /publications/
+    url: "/#-publications"
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Awards and Honors"
+    url: "/#-awards-and-honors"
+  
+  - title: "Projects"
+    url: "/#-projects"
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Homepage"
+    url: "/#-homepages"
+
+
+  # - title: "Publications"
+  #   url: /publications/
+
+  # - title: "Talks"
+  #   url: /talks/    
+
+  # - title: "Teaching"
+  #   url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  # - title: "Portfolio"
+  #   url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  # - title: "Blog Posts"
+  #   url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+  # - title: "CV"
+  #   url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+  #   url: /markdown/
