--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Beining Ying (应贝宁)"
-description              : "Dual Bachelor's Degree in Computer Science and Data Science"
+description              : "Master in Quantum and Distributed Computer Science"
 repository               : "BeiningYing/BeiningYing.github.io"
 google_scholar_stats_use_cdn : # true
 
